# viper

./: .all_code_files.txt  .clang-format  .codemap_mapped.txt  .gitattributes  .gitignore  .mcp.json  .unmapped_counts.txt  AGENTS.md  BASIC_FRONTEND_SUMMARY.txt  BASICtoILExamples.md  CHANGELOG.md  CLAUDE.md  CLAUDE.old  CMakeLists.txt  CODEMAP.md  CTestCustom.cmake.in  Makefile  PERF_ANALYSIS.md  Project Overview.md  README.md  RUNTIME_API_REVIEW.md  VERSION  VM_IMPROVEMENTS_SUMMARY.md  aarch64.md  all_code_files.txt  arm64_addimm_p0.il  arm64_addimm_p0.s  arm64_bit_and.il  arm64_bit_and.s  arm64_bit_or.il  arm64_bit_or.s  arm64_bit_xor.il  arm64_bit_xor.s  arm64_cli_add2.il  arm64_cli_add2.s  arm64_cli_ret0.il  arm64_cli_ret0.s  arm64_ret_p0.il  arm64_ret_p0.s  arm64_ret_p1.il  (+39 more)
os/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build_viper.sh
os/bugs/: microkernel.md  user_bugs.md
os/cmake/: aarch64-clang-toolchain.cmake  aarch64-toolchain.cmake
os/docs/: README.md  desktop_plan.md  gui_plan.md  index.md  loc_sloc_report.md  microkernel_plan.md  os_refactor_plan.md  progress.md  progress_0.2.0.md  project_issues.md  report.md  shell-commands.md  syscalls.md
os/kernel/: CMakeLists.txt  kernel.ld  main.cpp
os/scripts/: build_viper.sh  build_viperos.sh  make-esp.sh  run-kernel.sh  run-qemu.sh  test-qemu.sh
os/tests/: CMakeLists.txt
os/tools/: fsck.viperfs  mkfs.viperfs.cpp
os/user/: CMakeLists.txt  syscall.hpp  user.ld
os/vboot/: CMakeLists.txt  efi.h  main.c  vboot.h
runtime/: CMakeLists.txt  rt.c  rt.h  rt.hpp  rt_array.c  rt_array.h  rt_internal.h  rt_io.c  rt_math.c  rt_math.h  rt_memory.c  rt_random.c  rt_random.h  rt_string.c
src/: CMakeLists.txt
src/analysis/: CFG.cpp  CFG.hpp  Dominators.cpp  Dominators.hpp
src/buildmeta/: VERSION
src/bytecode/: Bytecode.cpp  Bytecode.def  Bytecode.hpp  BytecodeCompiler.cpp  BytecodeCompiler.hpp  BytecodeModule.hpp  BytecodeSemantics.hpp  BytecodeVM.cpp  BytecodeVM.hpp  BytecodeVM_threaded.cpp  ValueStackStringOwnership.hpp
src/common/: Environment.hpp  Filesystem.hpp  IntegerHelpers.hpp  Mangle.cpp  Mangle.hpp  PlatformCapabilities.hpp  RunProcess.cpp  RunProcess.hpp  Utf8CommandLine.hpp
src/il/: Utils.cpp  Utils.hpp
src/parse/: Cursor.cpp
src/pass/: PassManager.cpp
src/repl/: BasicReplAdapter.cpp  BasicReplAdapter.hpp  ReplColorScheme.hpp  ReplHistoryCodec.cpp  ReplHistoryCodec.hpp  ReplInputClassifier.cpp  ReplInputClassifier.hpp  ReplLineEditor.cpp  ReplLineEditor.hpp  ReplMetaCommands.cpp  ReplMetaCommands.hpp  ReplOutputCapture.cpp  ReplOutputCapture.hpp  ReplSession.cpp  ReplSession.hpp  ZiaReplAdapter.cpp  ZiaReplAdapter.hpp
src/runtime/: CMakeLists.txt  rt.hpp  rt_action.c  rt_action.h  rt_aes.c  rt_aes.h  rt_archive.c  rt_archive.h  rt_args.c  rt_args.h  rt_array.c  rt_array.h  rt_array_f64.c  rt_array_f64.h  rt_array_i64.c  rt_array_i64.h  rt_array_obj.c  rt_array_obj.h  rt_array_str.c  rt_array_str.h  rt_async.c  rt_async.h  rt_audio.c  rt_bag.c  rt_bag.h  rt_bigint.c  rt_bigint.h  rt_bimap.c  rt_bimap.h  rt_binbuf.c  rt_binfile.c  rt_bits.c  rt_bits.h  rt_bitset.c  rt_bloomfilter.c  rt_box.c  rt_box.h  rt_buttongroup.c  rt_buttongroup.h  rt_bytes.c  (+323 more)
src/support/: CMakeLists.txt  alignment.hpp  arena.cpp  arena.h  arena.hpp  diag_capture.cpp  diag_capture.hpp  diag_catalog.cpp  diag_catalog.def  diag_catalog.hpp  diag_expected.cpp  diag_expected.hpp  diagnostics.cpp  diagnostics.h  diagnostics.hpp  feature_flags.hpp  options.h  options.hpp  path_utils.cpp  path_utils.hpp  placeholder.cpp  result.h  result.hpp  small_vector.hpp  source_loc.hpp  source_location.cpp  source_location.hpp  source_manager.cpp  source_manager.h  source_manager.hpp  string_interner.cpp  string_interner.h  string_interner.hpp  symbol.cpp  symbol.h  symbol.hpp
src/tests/: CMakeLists.txt  RuntimeDefTestView.hpp  TestHarness.hpp  tmp_field_methods.pas
src/tui/: CMakeLists.txt
src/viperide/: CMakeLists.txt  README.md
src/vm/: Debug.cpp  Debug.hpp  DebugScript.cpp  DebugScript.hpp  DiagFormat.cpp  DiagFormat.hpp  DispatchMacros.hpp  DispatchStrategy.cpp  DispatchStrategy.hpp  FunctionExecCache.cpp  FunctionalRuntime.cpp  Game3DRuntime.cpp  IntOpSupport.hpp  Marshal.cpp  Marshal.hpp  NetworkRuntime.cpp  OpHandlerAccess.hpp  OpHandlerUtils.cpp  OpHandlerUtils.hpp  OpHandlers.cpp  OpHandlers.hpp  OpHandlers_Control.hpp  OpHandlers_Float.hpp  OpHandlers_Int.hpp  OpHandlers_Memory.hpp  OpHelpers.cpp  OpcodeHandlerHelpers.hpp  Runner.cpp  RuntimeBridge.cpp  RuntimeBridge.h  RuntimeBridge.hpp  SlotAccess.cpp  SlotAccess.hpp  ThreadsRuntime.cpp  Trace.cpp  Trace.hpp  Trap.cpp  Trap.hpp  TrapInvariants.hpp  VM.cpp  (+24 more)
src/zannaide/: CMakeLists.txt  README.md  zanna.project
src/zannastudio/: CMakeLists.txt  README.md  zanna.project
tests/: CMakeLists.txt
tests/analysis/: AcyclicTests.cpp  BasicAATests.cpp  CFGTests.cpp  DominatorsTests.cpp  GraphOrderTests.cpp
tests/basic/: CMakeLists.txt  fileio_eof_lof_loc.bas  fileio_input_num.bas  fileio_input_num.expect  fileio_loc_seek.expect  fileio_write.bas  fileio_write.expect  regress_fileio_open_close_ok.expect  select_case_double_else.bas  select_case_double_else.err  select_case_mixed_types.bas  select_case_range_outside.bas  select_case_ranges.expect  select_case_str.bas
tests/cmake/: TestHelpers.cmake
tests/common/: CodegenFixture.cpp  CodegenFixture.hpp  TestIRBuilder.cpp  TestIRBuilder.hpp  VmFixture.cpp  VmFixture.hpp
tests/data/: block_params_sum.il  input1.txt  mem2reg.bas  trace_cache.txt
tests/e2e/: BreakSrcCoalesce.bas  BreakSrcExact.bas  BreakSrcLine7.bas  CMakeLists.txt  TestMatrix.cpp  TraceSrcTests.bas  TraceSrcTests.bas.out  basic_args_some.bas  basic_array_oob.bas  basic_function_calls.bas  basic_math_phase1.bas.out  basic_oop_field.bas  basic_oop_method_return.bas  dim_locals_use.bas  do_exit.bas  gosub_return.bas  gosub_return.bas.out  monte_carlo_pi.expect  nested_calls.bas  simplifycfg_smoke.il  test_codegen.cmake  (+28 more)
tui/: CMakeLists.txt
viperdos/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  version.h
(+14331 files in other folders)
